--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2439,7 +2439,7 @@ hr {
 	top: 0;
 	width: 100%;
 	height: 100%;
-	object-fit: cover;
+	object-fit: fill;
 	border-radius: 380px;
 	-webkit-border-radius: 380px;
 	z-index: 10;
