--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -1,9 +1,9 @@
 /*
-Template Name: Luique
+Template Name: Manuel
 Template URI: https://bslthemes.com/
 Author: bslthemes
 Author URI: https://themeforest.net/user/bslthemes
-Description: Luique - Resume & Personal Portfolio HTML5 Template
+Description: Manuel - Resume & Personal Portfolio HTML5 Template
 Version: 1.0
 */
 
@@ -1541,11 +1541,11 @@ hr {
 	-webkit-transform: translateZ(0)  translateY(0);
 }
 
-@media screen and (max-width: 1200px) {
+/* @media screen and (max-width: 1200px) { */
 	.header.sticky {
 		background: #fff;
 	}
-}
+/* } */
 
 @media screen and (min-width: 1200px) {
 	.header.animate-in {
