--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3446,19 +3446,22 @@ hr {
 }
 
 .testimonials-item .image {
-	margin-bottom: 30px;
-	position: relative;
-	display: block;
-	width: 100%;
+    position: relative;
+    display: block;
+    width: 100%;
+    margin-bottom: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .testimonials-item .image img {
 	position: relative;
-	width: 100%;
+	width: 63%;
 	height: 180px;
 	object-position: center;
 	object-fit: cover;
-	border-radius: 18px;
+	border-radius: 48px;
 }
 
 .testimonials-item:first-child {
