--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -2433,7 +2433,7 @@ hr {
 .section.hero-started .slide img {
 	position: absolute;
 	left: 0;
-	top: 0;
+	top: 0px;
 	width: 100%;
 	height: 100%;
 	object-fit: fill;
